--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,7 +6,7 @@
     %meta{ :name => 'viewport', :content => 'initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
     %meta{ :name => 'apple-mobile-web-app-capable', :content => 'yes' }
     %meta{ :name => 'csrf-param', :content => request_forgery_protection_token }
-    %meta{ :name => 'csrf-token' }
+    %meta{ :name => 'csrf-token', :content => '' }
     %title Passmaster
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
