lower case is better

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -64,7 +64,7 @@
                   %td.field-label P:
                   %td{ :colspan => '2' }
                     .click-to-show
-                      %input.password.input-block-level{ :type => 'text', :name => 'password', 'data-password-visible' => 'false', 'data-default-value' => 'Click to show' }
+                      %input.password.input-block-level{ :type => 'text', :name => 'password', 'data-password-visible' => 'false', 'data-default-value' => 'click to show' }
                 %tr
                   %td.no-notes{ :colspan => '3' } No Notes
                   %td.notes{ :colspan => '3', :style => 'display:none;' }
