limit edit button width

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -60,6 +60,7 @@
     th.edit-link {
       text-align: right;
       vertical-align: top;
+      width: 45px;
     }
     td.field-label {
       width: 15px;
