--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -76,12 +76,14 @@
       cursor: default;
       background-color: #eee;
     }
-    td.no-notes {
-      color: #aaa;
-    }
-    td.notes,td.no-notes {
+    tr.notes,tr.no-notes {
       text-align: center;
-      padding-top: 5px;
+      td {
+        padding-top: 5px;
+      }
+    }
+    tr.no-notes {
+      color: #aaa;
     }
     p.notes {
       text-align: left;
