add new settings section and de-couple it from configure

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -6,7 +6,7 @@
       %img#refresh_spinner{ :src => '/img/spinner.gif', :alt => 'spinner', :style => 'display:none;' }
       = link_to(users_path, :remote => true, :id => 'refresh_link', :class => 'btn', :title => 'Refresh') do
         %i.icon-refresh
-      %button#configure_btn.btn{ :type => 'button', :title => 'Configure', :style => 'display:none;' }
+      %button#settings_btn.btn{ :type => 'button', :title => 'Settings', :style => 'display:none;' }
         %i.icon-cog
       %button#lock_btn.btn{ :type => 'button', :title => 'Lock', :style => 'display:none;' }
         %i.icon-lock
