--- a/app/views/application/_settings.html.haml
+++ b/app/views/application/_settings.html.haml
@@ -1,7 +1,8 @@
 #settings.container{ :style => 'display:none;' }
   .top-links
     .pull-left
-      %button.btn.btn-warning{ :type => 'button', 'data-logout' => 'true' } Logout
+      %button.btn.btn-warning{ :type => 'button', 'data-logout' => 'true', :title => 'Logout' }
+        %i.icon-off.icon-white
     .pull-right
       %button#settings_cancel_btn.btn{ :type => 'button' } Cancel
     .clearfix
