modal settings instead of another page

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -3,6 +3,12 @@
 
   #settings_btn {
     margin-left: 5px;
+    text-align: left;
+
+    ul.dropdown-menu {
+      right: -44px;
+      left: auto;
+    }
   }
 
   .pushed-down {
