--- a/app/assets/stylesheets/settings.css.scss
+++ b/app/assets/stylesheets/settings.css.scss
@@ -1,30 +1,31 @@
-#settings {
+.modal-body {
   text-align: center;
+  background-color: #f5f5f5;
+}
 
-  .pushed-down {
-    margin-top: 40px;
-  }
+.modal-footer {
+  padding: 5px;
+  border-top: 1px solid #f5f5f5;
+  -webkit-box-shadow: inset 0 1px 0 #f5f5f5;
+  -moz-box-shadow: inset 0 1px 0 #f5f5f5;
+  box-shadow: inset 0 1px 0 #f5f5f5;
+}
 
-  #restore_accounts_backup_file {
-    width: 100%;
-    max-width: 270px;
-    line-height: 0;
-  }
-
-  hr {
-    border-bottom: 1px solid #aaa;
-  }
-
-  #preferences {
-    .inline-radios {
-      margin-bottom: 20px;
-      label {
-        white-space: nowrap;
-        padding-right: 10px;
-      }
-    }
-    #mfa_configure {
-      margin-top: 10px;
+#preferences {
+  .inline-radios {
+    margin-bottom: 20px;
+    label {
+      white-space: nowrap;
+      padding-right: 10px;
     }
   }
+  #mfa_configure {
+    margin-top: 10px;
+  }
+}
+
+#restore_accounts_backup_file {
+  width: 100%;
+  max-width: 270px;
+  line-height: 0;
 }
