updated a bunch of copy and added links to google authenticator

--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -12,7 +12,10 @@
 
     .pushed-down
       %h4 Master Password
-      %p The Master Password is the only password you will need to remember. It is used to decrypt the rest of your individual account passwords. Enter a strong master password below.
+      %p
+        The Master Password is the only password you will need to remember.
+        It is used to unlock the rest of your individual account passwords so it is important that this password is hard to guess.
+        It should be at least 8 characters long and contain a mixture and upper and lower-case letters as well as numbers and special characters.
       .alert.alert-warning
         %strong Warning:
         It is extremely important that you remember this password as it CANNOT be recovered!
