--- a/app/views/application/_settings.html.haml
+++ b/app/views/application/_settings.html.haml
@@ -29,7 +29,7 @@
             - val = i * 5
             %option{ :value => val }= "#{val} Minutes"
           %option{ :value => 60 } 1 Hour
-      %strong Auto-backup on Change
+      %strong Auto-backup to Email on Change
       .inline-radios
         = label_tag(nil, :class => 'radio inline') do
           = radio_button_tag(:auto_backup, '1', false, :id => 'preferences_auto_backup_enabled')
@@ -46,7 +46,17 @@
           = radio_button_tag(:otp_enabled, '0', false, :id => 'preferences_mfa_disabled')
           Disabled
         #mfa_configure{ :style => 'display:none;' }
-          %p Use the following QR code or secret key to add Passmaster to Google Authenticator. It is a good idea to save the secret key in a safe location in case you lose your phone as it will be necessary to regain access to your accounts.
+          %p
+            Multi-factor authentication adds additional security to your encrypted data by requiring you to verify each device you use to access Passmaster once every 30 days.
+            In order to verify a device, you will be asked to enter a 6-digit code that can be obtained from the Google Authenticator app for
+            = link_to('Android', 'https://play.google.com/store/apps/details?id=com.google.android.apps.authenticator2', :target => '_blank')
+            and
+            = succeed '.' do
+              = link_to('iOS', 'https://itunes.apple.com/us/app/google-authenticator/id388497605?mt=8', :target => '_blank')
+            Use the following QR code or secret key to add Passmaster to Google Authenticator.
+          .alert.alert-info
+            %strong Note:
+            It is a good idea to save the secret key in a safe location in case you lose your device with Google Authenticator or accidentally remove the Passmaster account.
           #qr_code
           %strong Secret Key:
           %strong#otp_secret
@@ -63,7 +73,7 @@
     %p Change the email address you use to access your accounts.
     .alert.alert-warning
       %strong Warning:
-      You will not be able to access your accounts until you verify your new email address.
+      You will not be able to modify your accounts until you verify your new email address.
     = form_tag(users_path, :method => :put, :remote => true, :class => 'modal-form', :id => 'change_email_form') do
       = hidden_field_tag(:api_key, '', :id => 'change_email_api_key')
       %p{ :style => 'display:none;' }= password_field_tag(:hack_field, '', :id => nil)
@@ -78,7 +88,10 @@
     %button.close{ :type => 'button', 'data-dismiss' => 'modal', 'aria-hidden' => 'true' } &times;
     %h3#master_password_label Master Password
   .modal-body
-    %p The Master Password is the only password you will need to remember. It is used to decrypt the rest of your individual account passwords. Enter a strong master password below.
+    %p
+      The Master Password is the only password you will need to remember.
+      It is used to unlock the rest of your individual account passwords so it is important that this password is hard to guess.
+      It should be at least 8 characters long and contain a mixture and upper and lower-case letters as well as numbers and special characters.
     .alert.alert-warning
       %strong Warning:
       It is extremely important that you remember this password as it CANNOT be recovered!
@@ -101,7 +114,7 @@
     %button.close{ :type => 'button', 'data-dismiss' => 'modal', 'aria-hidden' => 'true' } &times;
     %h3#backup_accounts_label Backup Accounts
   .modal-body
-    %p Use one of the buttons below to backup your encrypted accounts database to a file on your computer or to your email. You can then restore your accounts from that file if necessary.
+    %p Use the File button below to save a backup of your encrypted accounts to your computer. Alternatively, you can use the Email button to have the backup attached to an email.
     .alert.alert-info
       %strong Note:
       Backups are locked with your current Master Password and you will need the password in order to restore the backup.
@@ -116,10 +129,10 @@
     %button.close{ :type => 'button', 'data-dismiss' => 'modal', 'aria-hidden' => 'true' } &times;
     %h3#restore_accounts_label Restore Accounts
   .modal-body
-    %p Select your backup file and enter the Master Password that was used to create the backup.
+    %p Select your backup file and enter the Master Password from when the backup was created.
     .alert.alert-danger
       %strong Danger:
-      This will replace ALL of your current accounts and reset your Master Password to whatever they were when the backup was created. You might want to make a backup of your current accounts before restoring.
+      This will replace ALL of your current accounts and reset your Master Password to where they were when the backup was created. You might want to make a backup of your current accounts before restoring.
     %form#restore_accounts_form{ :enctype => 'multipart/form-data' }
       %p= file_field_tag(:backup_file, :accept => 'text/plain', :id => 'restore_accounts_backup_file')
       %p= password_field_tag(:passwd, '', :placeholder => 'Backup Password', :class => 'input-xlarge', :id => 'restore_accounts_passwd', :required => true)
