--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -13,7 +13,7 @@
       %small#verify_email_placeholder
     %p You need to verify your email address to continue.
     .pushed-down
-      %p Enter the verification code that was emailed to you below or request a new one.
+      %p Enter the verification code that was emailed to you below or click the button to request a new one.
       = form_tag(users_path, :method => :put, :remote => true, :id => 'verify_form') do
         = hidden_field_tag(:api_key, '', :id => 'verify_api_key')
         %p= text_field_tag(:verification_code, '', :placeholder => 'Verification Code', :class => 'input-xlarge', :id => 'verify_verification_code', :required => true)
