--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -22,7 +22,7 @@
   span.num-accounts {
     line-height: 14px;
     font-size: 14px;
-    font-weight: bold;
+    color: #fff;
   }
   #add_account_btn {
     margin-left: 5px;
@@ -93,7 +93,7 @@
     }
     p.notes {
       text-align: left;
-      border: none;
+      border: 1px solid #e3e3e3;
       padding: 5px;
       margin: 5px 0 0 0;
       background-color: #fff;
