don't wrap whitespace around account names

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -64,6 +64,7 @@
       text-align: left;
       max-width: 0;
       overflow: hidden;
+      white-space: nowrap;
     }
     th.edit-link {
       text-align: right;
