--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 !!!
 
-%html{ :manifest => '/application.manifest' }
+%html{ :manifest => cache_manifest_path }
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
     %meta{ :name => 'viewport', :content => 'initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
