Revert "change page title"
This reverts commit 190727cf9eb6223de95ebd78a47181a183841736.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,7 @@
     %meta{ :name => 'apple-mobile-web-app-capable', :content => 'yes' }
     %meta{ :name => 'csrf-param', :content => request_forgery_protection_token }
     %meta{ :name => 'csrf-token', :content => '' }
-    %title Passmaster.io
+    %title Passmaster
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
 
