--- a/app/views/mailer/master_password_changed.html.haml
+++ b/app/views/mailer/master_password_changed.html.haml
@@ -4,4 +4,8 @@
 
 %p A backup of your accounts as they existed with the previous Master Password is attached to this message.
 
+%p If you did not make any changes and this is a surprise to you, please contact support by replying to this email.
+
 %p Thanks for using Passmaster!
+
+%p Reference ID: #{@user_id}
