call a javascript interface from the android app for one-click copy to clipboard

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -75,13 +75,13 @@
                 %tr
                   %td.field-label U:
                   %td{ :colspan => '2' }
-                    .click-to-select
+                    .click-to-copy-username
                       %input.username.input-block-level{ :type => 'text', :name => 'username' }
                 %tr
                   %td.field-label P:
                   %td{ :colspan => '2' }
-                    .click-to-show
-                      %input.password.input-block-level{ :type => 'text', :name => 'password', 'data-password-visible' => 'false', 'data-default-value' => 'click to show' }
+                    .click-to-copy-password
+                      %input.password.input-block-level{ :type => 'text', :name => 'password', 'data-password-visible' => 'false', 'data-default-value' => 'click to copy' }
                 %tr.no-notes
                   %td{ :colspan => '3' } No Notes
                 %tr.notes{ :style => 'display:none;' }
