add users.version_code field which contains a hash of the user's current account. will be used to ensure no data is ever overwritten by the user.

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -136,4 +136,5 @@
               = hidden_field_tag(:api_key, '', :id => nil, :class => 'api-key')
               = hidden_field_tag(:encrypted_data, '', :id => nil, :class => 'encrypted-data')
               = hidden_field_tag(:schema_version, '', :id => nil, :class => 'schema-version')
+              = hidden_field_tag(:version_code, '', :id => nil, :class => 'version-code')
     .clearfix
