--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -27,3 +27,4 @@
         = hidden_field_tag(:new_api_key, '', :id => 'configure_hidden_new_api_key')
         = hidden_field_tag(:encrypted_data, '', :id => 'configure_hidden_encrypted_data')
         = hidden_field_tag(:schema_version, '', :id => 'configure_hidden_schema_version')
+        = hidden_field_tag(:version_code, '', :id => 'configure_hidden_version_code')
