--- a/app/views/application/_settings.html.haml
+++ b/app/views/application/_settings.html.haml
@@ -5,6 +5,7 @@
   .modal-body
     = form_tag(users_path, :method => :put, :remote => true, :class => 'modal-form', :id => 'preferences_form') do
       = hidden_field_tag(:api_key, '', :id => 'preferences_api_key')
+      = hidden_field_tag(:version_code, '', :id => 'preferences_version_code')
       %strong Default Password Length
       %p
         %select#preferences_password_length.input-medium{ :name => 'password_length' }
@@ -76,6 +77,7 @@
       You will not be able to modify your accounts until you verify your new email address.
     = form_tag(users_path, :method => :put, :remote => true, :class => 'modal-form', :id => 'change_email_form') do
       = hidden_field_tag(:api_key, '', :id => 'change_email_api_key')
+      = hidden_field_tag(:version_code, '', :id => 'change_email_version_code')
       %p{ :style => 'display:none;' }= password_field_tag(:hack_field, '', :id => nil)
       %p= email_field_tag(:email, '', :placeholder => 'Email Address', :class => 'input-xlarge', :id => 'change_email_email', :required => true)
       %p
@@ -108,6 +110,7 @@
       = hidden_field_tag(:new_api_key, '', :id => 'master_password_hidden_new_api_key')
       = hidden_field_tag(:encrypted_data, '', :id => 'master_password_hidden_encrypted_data')
       = hidden_field_tag(:schema_version, '', :id => 'master_password_hidden_schema_version')
+      = hidden_field_tag(:version_code, '', :id => 'master_password_hidden_version_code')
 
 #backup_accounts.modal.hide{ :role => 'dialog', :tabindex => '-1', 'aria-labelledby' => 'backup_accounts_label', :style => 'display:none;' }
   .modal-header
