update gems and use courier for passwords

--- a/app/assets/stylesheets/accounts.css.scss
+++ b/app/assets/stylesheets/accounts.css.scss
@@ -53,6 +53,10 @@
     border-radius: 4px;
   }
 
+  input.password {
+    font-family: Courier !important;
+  }
+
   .read {
     table {
       width: 100%;
