--- a/app/views/application/_verify.html.haml
+++ b/app/views/application/_verify.html.haml
@@ -11,7 +11,7 @@
     %h2
       Verify
       %small#verify_email_placeholder
-    %p You need to verify your email address to continue.
+    %p You need to verify your email address to continue. This is only to prevent other people from claiming your address.
     .pushed-down
       %p Enter the verification code that was emailed to you below or click the button to request a new one.
       = form_tag(users_path, :method => :put, :remote => true, :id => 'verify_form') do
